chore: delete endpoint for user report generation
